# EndoriumFort

./: .dockerignore  .env.prod.example  .gitignore  CHANGELOG.md  CHANGES_v0.0.56.md  COOKIE_AUTH_SUCCESS.md  DELIVERY_SUMMARY.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  WEB_PROXY_TESTING.md  audit-log.jsonl  build-all.ps1  build-all.sh  deploy-prod.sh  diagnose-post-400.sh  docker-compose.prod.yml  docker-compose.yml  run-dev.sh  run-prod.sh  status.sh  test-cookie-auth.sh  test-integration.sh  v0.0.56-RELEASE.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: agent-installers-ci.yml  ci.yml  codeql.yml  docker-publish.yml  release-agent.yml  release-gate.yml
agent/: go.mod  go.sum  main.go  main_test.go
agent/cmd/endoriumfort-relay/: main.go
agent/installers/linux/: install-protocol.sh  uninstall-protocol.sh
agent/installers/macos/: install-protocol.sh  uninstall-protocol.sh
agent/installers/windows/: install-protocol.ps1  uninstall-protocol.ps1
agent/packaging/: build-installers.sh
agent/packaging/linux/: build-apt-packages.sh  build-packages.sh
agent/packaging/macos/: build-pkg.sh
agent/packaging/windows/: build-msi.ps1
apt/: index.html
apt/dists/stable/: Release
apt/dists/stable/main/binary-all/: Packages  endoriumfort-web-bastion_1.0.18_all.deb  endoriumfort-web-bastion_1.0.19_all.deb
apt/dists/stable/main/binary-amd64/: Packages  endoriumfort-agent_1.0.16_amd64.deb  endoriumfort-agent_1.0.18_amd64.deb  endoriumfort-agent_1.0.19_amd64.deb  endoriumfort-relay_1.0.16_amd64.deb  endoriumfort-relay_1.0.18_amd64.deb  endoriumfort-relay_1.0.19_amd64.deb
backend/: CMakeLists.txt  audit-log.jsonl  build-mingw.ps1
backend/recordings/: session_2_1.cast  session_3_2.cast  session_3_3.cast  session_4_4.cast  session_5_5.cast  session_6_6.cast  session_7_7.cast  session_8_8.cast  session_9_9.cast
backend/scripts/: increment_version.cmake
backend/src/: app_context.cc  app_context.h  crypto.h  database.h  http_proxy.cc  http_proxy.h  main.cc  main.cc.bak  models.h  rdp.cc  rdp.h  relay.cc  routes.cc  routes.h  security_middleware.h  session_recording.cc  session_recording.h  ssh.cc  ssh.h  totp.h  tunnel.cc  tunnel.h  utils.h  version.h
backend/tests/: utils_test.cc
docker/: entrypoint.sh  nginx.conf
docs/: index.md
frontend/: index.html  package-lock.json  package.json  playwright.config.mjs  vite.config.js
frontend/src/: App.jsx  WebProxyViewer.jsx  api.js  main.jsx  styles.css  webproxy.css
frontend/test/: api.test.mjs
frontend/test/e2e/: auth-login.spec.mjs
recordings/: session_14_3.cast  session_8_1.cast  session_9_2.cast
scripts/: generate-apt-gpg-secrets.sh
